<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="splash_screen_peso_ideal_title">Ideal Weight</string>
    <string name="splash_screen_peso_ideal_btn">Start</string>
    <string name="splash_screen_peso_ideal_info">Body Mass Index Calculator (BMI)</string>
    <string name="activity_main_weight">Weight System</string>
    <string name="activity_main_height">Height System</string>
    <string name="activity_main_kg">Kilogram (kg)</string>
    <string name="activity_main_libs">Pounds (lb)</string>
    <string name="activity_main_cm">Centimeters (cm)</string>
    <string name="activity_main_ft_in">Feet/Inches (ft/in)</string>
    <string name="activity_main_hint_kg">Kilograms</string>
    <string name="activity_main_hint_lb">Pounds</string>
    <string name="activity_main_hint_cm">Centimeters</string>
    <string name="activity_main_hint_ft">Feet</string>
    <string name="activity_main_hint_in">Inches</string>
    <string name="digits">0123456789</string>
    <string name="digits_dot">0123456789.</string>
    <string name="activity_main_button">Calculate BMI</string>
</resources>
