<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.eteco.bmicalculator.SplashScreenActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_screen_peso_ideal_title"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginBottom="175dp"/>

    <ImageView
        android:layout_gravity="center"
        android:layout_marginBottom="120dp"
        android:src="@drawable/bmi"
        android:maxWidth="120dp"
        android:maxHeight="120dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_screen_peso_ideal_info"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:layout_marginBottom="65dp"/>

    <Button
        android:id="@+id/splash_screen_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="80dp"
        android:text="@string/splash_screen_peso_ideal_btn"/>


</FrameLayout>
